update css links

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,10 +14,12 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/poole.css"/>
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/syntax.css"/>
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/hyde.css"/>
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/ianc.css"/>
+  <link rel="stylesheet" href="/assets/css/poole.css"/>
+  <link rel="stylesheet" href="/assets/css/syntax.css"/>
+  <link rel="stylesheet" href="/assets/css/hyde.css"/>
+  <link rel="stylesheet" href="/assets/css/ianc.css"/>
+
+  <!-- google fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans:100,400,700|IBM+Plex+Serif:400,400i|Bangers"/>
 
   <!-- font awesome -->
