--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,10 +2,10 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
 
-      <a class="profile-photo" href="{{ site.baseurl }}"></a>
+      <a class="profile-photo" href="/"></a>
 
       <h1>
-        <a href="{{ site.baseurl }}">
+        <a href="/">
           {{ site.title }}
         </a>
       </h1>
@@ -13,7 +13,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/">Home</a>
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
         {% if node.title != null %}
