--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,17 @@ layout: default
 ---
 
 <div class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
-  {{ content }}
+
+    {% if page.img %}
+        <img src="{{ page.img.src }}"
+             class="{{ page.img.class }}"
+             alt="{{ post.img.alt }}"
+             title="{{ post.img.alt }}" />
+    {% endif %}
+
+    <h1 class="page-title">
+        {{ page.longTitle ? page.longTitle : page.title }}
+    </h1>
+
+    {{ content }}
 </div>
