--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,13 @@ layout: default
 ---
 
 <div class="post">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h1 class="post-title">
+        {% if page.longTitle %}
+            {{ page.longTitle }}
+        {% else %}
+            {{ page.title }}
+        {% endif %}
+    </h1>
     <span class="post-date">{{ page.date | date: "%-d %B %Y" }}</span>
     {{ content }}
 </div>
