add support for scripts referenced in post yaml

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,4 +20,10 @@ layout: default
     </h1>
 
     {{ content }}
+    
+    {% if page.scripts %}
+        {% for script in page.scripts %}
+            <script type="text/javascript" src="{{ script }}"></script>
+        {% endfor %}
+    {% endif %}
 </div>
