use slug for page ID

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="page" id="page-{{ page.title | slugify }}">
+<div class="page" id="page-{{ page.slug }}">
 
     {% if page.img %}
         <img src="{{ page.img.src }}"
