--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="post" id="post-{{ post.title | slugify }}">
+<div class="post" id="post-{{ page.slug }}">
     <h1 class="post-title">
         {% if page.longTitle %}
             {{ page.longTitle }}
