add titles to social icons

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,9 +23,9 @@
                 {% endif %}
             {% endfor %}
             <span class="sidebar-nav-item social-icons extra-space-above">
-                <a href="https://github.com/icooper" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://instagram.com/i.coop" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://linkedin.com/in/iancooper" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a title="icooper on GitHub" href="https://github.com/icooper" target="_blank"><i class="fab fa-github"></i></a>
+                <a title="@i.coop on Instagram" href="https://instagram.com/i.coop" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a title="Ian Cooper on LinkedIn" href="https://linkedin.com/in/iancooper" target="_blank"><i class="fab fa-linkedin"></i></a>
             </span>
         </nav>
     </div>
