--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,12 +15,18 @@ layout: default
 
     {% if page.scripts %}
         {% for script in page.scripts %}
-            <script type="text/javascript" src="{{ script }}"></script>
+            <script type="text/javascript" src="/assets/js/{{ script }}"></script>
         {% endfor %}
     {% endif %}
 </div>
 
 {% comment %}
+<!--
+    we're not using related posts,
+    but I'm leaving this in the layout
+    in case I want to use it later
+-->
+
 <div class="related">
     <h2>Related Posts</h2>
     <ul class="related-posts">
