--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,7 @@
                 </a>
             </div>
         </div>
+
+        <script type="text/javascript" src="/assets/js/prism.js"></script>
     </body>
 </html>
