split VGL syntax highlighting into a separate file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,5 +13,6 @@
         </div>
 
         <script type="text/javascript" src="/assets/js/prism.js"></script>
+        <script type="text/javascript" src="/assets/js/prism-vgl.js"></script>
     </body>
 </html>
