--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,9 +1,8 @@
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta charset="utf-8"/>
 
     <!-- Enable responsiveness on mobile devices-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <title>
         {% if page.title == "Home" %}
@@ -14,10 +13,10 @@
     </title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/assets/css/poole.css"/>
-    <link rel="stylesheet" href="/assets/css/syntax.css"/>
-    <link rel="stylesheet" href="/assets/css/hyde.css"/>
-    <link rel="stylesheet" href="/assets/css/ianc.css"/>
+    <link rel="stylesheet" href="/static/css/poole.css"/>
+    <link rel="stylesheet" href="/static/css/syntax.css"/>
+    <link rel="stylesheet" href="/static/css/hyde.css"/>
+    <link rel="stylesheet" href="/static/css/ianc.css"/>
 
     <!-- google fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans:100,400,700|IBM+Plex+Serif:400,400i|Bangers"/>
@@ -28,5 +27,5 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/fontawesome.css" integrity="sha384-BzCy2fixOYd0HObpx3GMefNqdbA7Qjcc91RgYeDjrHTIEXqiF00jKvgQG0+zY/7I" crossorigin="anonymous"/>
 
     <!-- load jquery -->
-    <script type="text/javascript" src="/assets/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.js"></script>
 </head>
