--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -2,7 +2,7 @@
     <div class="container sidebar-sticky">
         <div class="sidebar-about">
 
-            <a class="profile-photo" href="/"></a>
+            <a class="profile-photo" href="/" title="Ian Cooper"></a>
 
             <h1>
                 <a href="/">
@@ -14,8 +14,7 @@
 
         <nav class="sidebar-nav">
             <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/">Home</a>
-            {% assign pages_list = site.pages %}
-            {% for node in pages_list %}
+            {% for node in site.pages %}
                 {% if node.title != null %}
                     {% if node.layout == "page" %}
                         <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
