--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,7 +7,7 @@
             {{ content }}
             <div class="license">
                 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-                    <img alt="CC BY-SA" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" />
+                    <img alt="CC BY-SA" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" />
                 </a>
             </div>
         </div>
