--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 
     {% if page.scripts %}
         {% for script in page.scripts %}
-            <script type="text/javascript" src="/assets/js/{{ script }}"></script>
+            <script type="text/javascript" src="/static/js/{{ script }}"></script>
         {% endfor %}
     {% endif %}
 </div>
